style(components): restyle dark mode, fix scrolling issue with drives

--- a/src/app/components/RecentsThisPCStyles.scss
+++ b/src/app/components/RecentsThisPCStyles.scss
@@ -841,16 +841,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 120px;
-    height: 120px;
+    width: 136px;
+    height: 136px;
     flex-shrink: 0;
 }
 
 .pie-chart {
     width: 100%;
     height: 100%;
-    max-width: 120px;
-    max-height: 120px;
+    max-width: 136px;
+    max-height: 136px;
 }
 
 .pie-chart-center {
